--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native": "^0.60.4",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-reanimated": "^1.1.0",
-    "recyclerlistview": "^2.0.10-beta.3"
+    "recyclerlistview": "^2.0.10-beta.3",
+    "react-native-vector-icons": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
