--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start-reset": "node node_modules/react-native/local-cli/cli.js start --reset-cache",
     "ios": "react-native run-ios",
     "test": "jest",
     "lint": "eslint ."
@@ -13,8 +14,9 @@
     "react-native": "^0.60.4",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-reanimated": "^1.1.0",
-    "recyclerlistview": "^2.0.10-beta.3",
-    "react-native-vector-icons": "latest"
+    "react-native-responsive-screen": "^1.2.2",
+    "react-native-vector-icons": "latest",
+    "recyclerlistview": "^2.0.10-beta.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
