--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.8.6",
     "react-native": "^0.60.4",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-haptic-feedback": "^1.8.2",
     "react-native-reanimated": "^1.1.0",
     "react-native-responsive-screen": "^1.2.2",
     "react-native-vector-icons": "latest",
