--- a/package.json
+++ b/package.json
@@ -3,34 +3,32 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "start-reset": "node node_modules/react-native/local-cli/cli.js start --reset-cache",
+    "start": "react-native start",
+    "start-reset": "react-native start --reset-cache",
     "ios": "react-native run-ios",
-    "test": "jest",
+    "ios-iphone7": "react-native run-ios --simulator 'iPhone 7'",
     "lint": "eslint ."
   },
+  "localGestureHandlerFork": "file:///Users/jhume/Work/GitHubLibs/react-native-gesture-handler/",
   "dependencies": {
     "react": "16.8.6",
-    "react-native": "^0.60.4",
-    "react-native-gesture-handler": "^1.3.0",
+    "react-native": "^0.60.5",
     "react-native-haptic-feedback": "^1.8.2",
     "react-native-reanimated": "^1.1.0",
     "react-native-responsive-screen": "^1.2.2",
     "react-native-vector-icons": "latest",
-    "recyclerlistview": "^2.0.10-beta.3"
+    "recyclerlistview": "^2.0.10-beta.3",
+    "@babel/runtime": "^7.5.5",
+    "react-native-gesture-handler": "shufflingB/react-native-gesture-handler#swipeable_ios_default_thresholds"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
-    "@babel/runtime": "^7.5.5",
     "@react-native-community/eslint-config": "^0.0.5",
-    "babel-jest": "^24.8.0",
     "eslint": "^6.1.0",
     "flow-bin": "^0.104.0",
-    "jest": "^24.8.0",
-    "metro-react-native-babel-preset": "^0.55.0",
-    "react-test-renderer": "16.8.6"
-  },
-  "jest": {
-    "preset": "react-native"
+    "glob-to-regexp": "^0.4.1",
+    "metro-react-native-babel-preset": "^0.56.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "babel-plugin-module-resolver": "^3.2.0"
   }
 }
